--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,22 +67,20 @@ background-color:#28AAE1;
 
 }
 
-#cont{
-  margin-left: 10em;
-  display: inline;
-  padding-bottom: 40px;
-
-
-}
-#cont div{
-padding: 1em 0.5em;
-outline: 0.1em solid #E5E3F2;
-background-color: #fff;
+#text P{
+padding-bottom: 30px;
+background-color: white;
 margin:30px;
-
+overflow: hidden;
+margin-top:100px;
+padding: 20px;
 }
 
 p{
-display: inline-block;
 margin-left: 0.5em;
+position: relative;
+}
+
+#text after:fecha_hora{
+
 }
